# open_ai_rs

./: .gitignore  Cargo.toml  Dockerfile  README.en.md  README.md
alpine/: config
src/: main.rs  user_auth.rs
src/config/: config-dev.toml  config-prod.toml  config.toml
src/global_variable/: mod.rs  mysql_client.rs  redis_client.rs
src/handler/: mod.rs  user_handler.rs
src/handler/open_ai/: mod.rs  open_ai_request.rs
src/middleware/: mod.rs
src/model_handler/: mod.rs  user_handler.rs
src/open_ai/: open_ai_request.rs
