[package]
name = "open_ai_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.6", features = ["headers"] }
async-openai = "0.6.1"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.93"
serde = { version = "^1", features = ["derive"] }
async-trait = "0.1.64"