[package]
name = "open_ai_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
axum = { version = "0.6.6", features = ["headers"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
mysql = "23.0.1"
async-trait = "0.1.64"
redis = { version = "0.22.3", features = ["tokio-comp"] }
toml = "0.7.2"
